--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,22 @@
 {
+  "name": "moment-server",
+  "version": "1.0.0",
+  "main": "index.js",
+  "author": "Innei",
+  "license": "MIT",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "cors": "^2.8.5",
+    "cross-env": "^6.0.3",
+    "dotenv": "^8.2.0",
     "express": "^5.0.0-alpha.7",
-    "mongoose": "^5.7.7"
+    "http-assert": "^1.4.1",
+    "mongoose": "^5.7.7",
+    "zxcvbn": "^4.4.2"
+  },
+  "scripts": {
+    "start": "cross-env NODE_ENV=development nodemon index.js",
+    "debug": "cross-env NODE_ENV=development nodemon --debug index.js",
+    "prod": "pm2-runtime start ecosystem.config.js --env production"
   }
 }
