--- a/server/package.json
+++ b/server/package.json
@@ -6,12 +6,17 @@
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^3.0.6",
+    "connect-redis": "^4.0.3",
+    "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "cross-env": "^6.0.3",
     "dotenv": "^8.2.0",
     "express": "^5.0.0-alpha.7",
+    "express-session": "^1.17.0",
     "http-assert": "^1.4.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.7",
+    "redis": "^2.8.0",
     "zxcvbn": "^4.4.2"
   },
   "scripts": {
