--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     "start": "cross-env NODE_ENV=development nodemon index.js",
     "debug": "cross-env NODE_ENV=development nodemon --debug index.js",
     "prod": "pm2-runtime start ecosystem.config.js --env production"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.4",
+    "pm2": "^4.1.2"
   }
 }
