--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^3.0.6",
+    "chalk": "^3.0.0",
     "connect-redis": "^4.0.3",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
